public class Libro {
    private String titulo;
    private String ISBN;
    private String editorial;
    private String idioma;
    private int numPaginas;
    private int anno;
    private String dispReserva;
    public void Libro(String titulo, String ISBN, String editorial, String idioma, int numPaginas, int anno, String dispReserva) {
        // TODO: Implementar el método
    }
    public void setTitulo(String titulo) {
        // TODO: Implementar el método
    }
    public String getTitulo() {
        // TODO: Implementar el método
    }
    public void setISBN(String ISBN) {
        // TODO: Implementar el método
    }
    public String getISBN() {
        // TODO: Implementar el método
    }
    public void setEditorial(String editorial) {
        // TODO: Implementar el método
    }
    public String getEditorial() {
        // TODO: Implementar el método
    }
    public void setIdioma(String idioma) {
        // TODO: Implementar el método
    }
    public String getIdioma() {
        // TODO: Implementar el método
    }
    public void setNumPaginas(int numPaginas) {
        // TODO: Implementar el método
    }
    public int getNumPaginas() {
        // TODO: Implementar el método
    }
    public void setAnno(int anno) {
        // TODO: Implementar el método
    }
    public int getAnno() {
        // TODO: Implementar el método
    }
    public void setDispReserva(String dispReserva) {
        // TODO: Implementar el método
    }
    public String getDispReserva() {
        // TODO: Implementar el método
    }
    public boolean estaDisponible(String dispReserva) {
        // TODO: Implementar el método
    }
    public boolean esExtranjero(String idioma) {
        // TODO: Implementar el método
    }
    public void informacion() {
        // TODO: Implementar el método
    }
}
