' Generated by UML Generator
' Encoded: pLdTRzms37_FN-57tNe1zXmCHTFcYdL8WiFIFWrxqDdgLPjjUR8TTEswltsKh0-IyXqAT6ZxaiGKIP4_VeXIdesJjDFSjHVZdxeVf9LTLRTo7A-doUh3FAbNjUaVz0TL_NZnJZUgghMjMtLnuRcgv_hGQZEfMbOVBwhgiZVTmQghwW6a-wEZDDggkjQcnyHtnihhGS7ELbvLkfyYyOLMria7KgiFrenNrQqUfvzktSTJHnubR1we3_2t9uAwqVI9lby-zsOHkOGVJxArWXgwhGepjrLXv4929cwSKgkEi9-LDkme7lMe9zbFm9EDs5nLZqOtLC0gWBypOZIjha6cCHRBR2llltC8VY4DicayIPnOjwepZ-ei2wXmo0a79RWCFmlvq-kZckuzVWn6n79CB1iKU2Tv4v4M1UPKFZDo5J-Zo8WYJ5GBuTt4p8fQbc0A7jUimKNe-W1Bqx8JNzVzMsCxwSn4sOKOEkDZxV4VLnOSj2VfDteSJ0zw5MDn7A_D9DkGBMiQrkqvp6CTpDaR-rfFSsl4v7-XCFXrdoUZFlRI_ggS8QC4IyIuvCEs2XM7rjOo_bFi5RjkQ1Na-D8fXXcWDRWfZBDg6vDgtrTib2dgLJMo2KMvKhfoK6sh6zSwKe7t6abtKhVvSrAjUcjwaoc3DM_LI7NslTcz1v-rwciTEm9rOriX9pOXp_QUHL1EcgI1XUVvWrSci4uY5jP3LYUWVV0Mb6bW7UNLm_Dx_AqQFHchPOk9kj6cavZIpzrU7hNlho503f3qqK2cGY8e-qZ4V12NHaHDsLRO41TFPiQseaPiAsR24f6K0yNs4VvJAOvm32mSVcUXm6PIAR_CPNRH3r5uHAKpOx6jzrjGzzdM2mkNl4y82GOMwyoPZtJ4Qm1K95IfZ5yZt3SPSx66FslccPcOxHfiRdCd51sCWJRGB_oxzz3T-ZyKv5I14M94dLaKlSYdv8q-mg7RBfNYcMb3WhDPzd-Rk-TNLMDci8vcT13_weczhPYjqC2ufJ7vNowSWadGs4GcdawlerPHwgVranWt2AhFYC1B69NgqAfMEinyqBNaisCEm2Bz3V0lxDhyJmNu9YeMvHP4GMOaGJkB-9tKlOVwoKUekKdNdoeu1diXxJ6Tax_zNeZb4_tKY9_EufFpVd4UUyvy8dij-4psvSTEPJyry7Cv7aJyP4wPaiq_DqDyhO5XW-QpLol1-jBXUWSkYUGNFt5WZVRxwBKe_6VDFp7o3G4bWP2YOcwniD0XAGYUp4pFKFIYWBZWqBDE5Dcu_3x6HnIHOgDOOYGgmWc8ubaUdNXnDVWao5zw3t87vo_G9bgvZ83nw4k5wuRqKoLRom4I3zVje3z8w-ut-GY5wN4mz2wFcY7YSxqktRxZT0Z9RUxa-xp1sVlv-Rj4gcP_9-LrJ9s1McIkGBqYHrXFJppS2IXWxCBcYslpHJHJK8EfSEOY-RNN7y0fARXlB7cNLK4d8Jy43-wW74uEm8DPkQYVcEzMjsO37jt-FcChECxboOYkjAZ0GZ04ZGfjKv67GbUablYycsl0j1JViDpaGonIC47zAnIMbNS3dzFuoQ77hqa3imm3ArlzENpXl2cU2aYds8tJ37EHRnZ_Gepkr8YgEHLVOFisDUWPic5ewl94GLTvNYqy_BBid0edCOn4Clc_-si6WrSGGCpV1Gh-4rkBO0bamJauD95l3PnRLRkti-KaQQ5rozlrLzc4K93uXdqQlBfDbeeDD_M9F5fr3AzWfrv8LQixcD3FC2MOteopj3hVOnuCr3Lwn0PBbhVUvXHiGSDt-yn5d489vec2hcO88ntrOnAPCQ6o4gF1hvsFKQCUJVkepiS8_O_2N5w6fqr6T6dBQQZ5fwVBoyj_dk85yexW5nVr-7QBo7uaOxezxOUI5Xko5_VsyLP5LsAThbEpvp5PkIkHdZcVgRwPk_O_
' URL: http://www.plantuml.com/plantuml/uml/pLdTRzms37_FN-57tNe1zXmCHTFcYdL8WiFIFWrxqDdgLPjjUR8TTEswltsKh0-IyXqAT6ZxaiGKIP4_VeXIdesJjDFSjHVZdxeVf9LTLRTo7A-doUh3FAbNjUaVz0TL_NZnJZUgghMjMtLnuRcgv_hGQZEfMbOVBwhgiZVTmQghwW6a-wEZDDggkjQcnyHtnihhGS7ELbvLkfyYyOLMria7KgiFrenNrQqUfvzktSTJHnubR1we3_2t9uAwqVI9lby-zsOHkOGVJxArWXgwhGepjrLXv4929cwSKgkEi9-LDkme7lMe9zbFm9EDs5nLZqOtLC0gWBypOZIjha6cCHRBR2llltC8VY4DicayIPnOjwepZ-ei2wXmo0a79RWCFmlvq-kZckuzVWn6n79CB1iKU2Tv4v4M1UPKFZDo5J-Zo8WYJ5GBuTt4p8fQbc0A7jUimKNe-W1Bqx8JNzVzMsCxwSn4sOKOEkDZxV4VLnOSj2VfDteSJ0zw5MDn7A_D9DkGBMiQrkqvp6CTpDaR-rfFSsl4v7-XCFXrdoUZFlRI_ggS8QC4IyIuvCEs2XM7rjOo_bFi5RjkQ1Na-D8fXXcWDRWfZBDg6vDgtrTib2dgLJMo2KMvKhfoK6sh6zSwKe7t6abtKhVvSrAjUcjwaoc3DM_LI7NslTcz1v-rwciTEm9rOriX9pOXp_QUHL1EcgI1XUVvWrSci4uY5jP3LYUWVV0Mb6bW7UNLm_Dx_AqQFHchPOk9kj6cavZIpzrU7hNlho503f3qqK2cGY8e-qZ4V12NHaHDsLRO41TFPiQseaPiAsR24f6K0yNs4VvJAOvm32mSVcUXm6PIAR_CPNRH3r5uHAKpOx6jzrjGzzdM2mkNl4y82GOMwyoPZtJ4Qm1K95IfZ5yZt3SPSx66FslccPcOxHfiRdCd51sCWJRGB_oxzz3T-ZyKv5I14M94dLaKlSYdv8q-mg7RBfNYcMb3WhDPzd-Rk-TNLMDci8vcT13_weczhPYjqC2ufJ7vNowSWadGs4GcdawlerPHwgVranWt2AhFYC1B69NgqAfMEinyqBNaisCEm2Bz3V0lxDhyJmNu9YeMvHP4GMOaGJkB-9tKlOVwoKUekKdNdoeu1diXxJ6Tax_zNeZb4_tKY9_EufFpVd4UUyvy8dij-4psvSTEPJyry7Cv7aJyP4wPaiq_DqDyhO5XW-QpLol1-jBXUWSkYUGNFt5WZVRxwBKe_6VDFp7o3G4bWP2YOcwniD0XAGYUp4pFKFIYWBZWqBDE5Dcu_3x6HnIHOgDOOYGgmWc8ubaUdNXnDVWao5zw3t87vo_G9bgvZ83nw4k5wuRqKoLRom4I3zVje3z8w-ut-GY5wN4mz2wFcY7YSxqktRxZT0Z9RUxa-xp1sVlv-Rj4gcP_9-LrJ9s1McIkGBqYHrXFJppS2IXWxCBcYslpHJHJK8EfSEOY-RNN7y0fARXlB7cNLK4d8Jy43-wW74uEm8DPkQYVcEzMjsO37jt-FcChECxboOYkjAZ0GZ04ZGfjKv67GbUablYycsl0j1JViDpaGonIC47zAnIMbNS3dzFuoQ77hqa3imm3ArlzENpXl2cU2aYds8tJ37EHRnZ_Gepkr8YgEHLVOFisDUWPic5ewl94GLTvNYqy_BBid0edCOn4Clc_-si6WrSGGCpV1Gh-4rkBO0bamJauD95l3PnRLRkti-KaQQ5rozlrLzc4K93uXdqQlBfDbeeDD_M9F5fr3AzWfrv8LQixcD3FC2MOteopj3hVOnuCr3Lwn0PBbhVUvXHiGSDt-yn5d489vec2hcO88ntrOnAPCQ6o4gF1hvsFKQCUJVkepiS8_O_2N5w6fqr6T6dBQQZ5fwVBoyj_dk85yexW5nVr-7QBo7uaOxezxOUI5Xko5_VsyLP5LsAThbEpvp5PkIkHdZcVgRwPk_O_
' Generated on: 2025-11-19T13:52:04.569577

@startuml practica5
skinparam classAttributeIconSize 0
hide circle

class Biblioteca {
  -nombre: String
  -direccion: String
  -horaApertura: int
  -horaCierre: int
  -libros: List<Libro>
  -salas: List<Sala>
  -personas: List<PersonaPoo>
  --
  +Biblioteca(nombre: String, direccion: String, horaApertura: int, horaCierre: int)
  +registrarPersona(visitante: PersonaPoo): void
  +registrarPrestamo(solicitador: PersonaPoo, libro: Libro): void
  +addLibro(libro: Libro): void
  +removeLibro(libro: Libro): void
  +addSala(sala: Sala): void
  +removeSala(sala: Sala): void
  +setNombre(nombre: String): void
  +getNombre(): String
  +setDireccion(direccion: String): void
  +getDireccion(): String
  +setHoraApertura(horaApertura: int): void
  +getHoraApertura(): int
  +setHoraCierre(horaCierre: int): void
  +estaAbierta(hora: int): void
  +informacionBiblioteca(): void
  +mostrarLibros(): void
  +mostrarSalas(): void
  +mostrarSalasDisponibles(): void
  +motrarTotalPersonas(): void
  +mostrarBiblioteca(): void
  +buscarLibroPorTitulo(titulo: String): Libro
  +asignarResponsable(s: Sala, personaResponsable: PersonaPoo): void
}

class Empleado {
  -puesto: String
  -sueldo: int
  --
  +Empleado(nombre: String, edad: int, direccion: String, apellidos: String, dni: String, email: String, telefono: String, profesion: String, annoExperiencia: int, puesto: String, sueldo: int)
  +setPuesto(puesto: String): void
  +getPuesto(): String
  +setSueldo(sueldo: int): void
  +getSueldo(): int
}

class Libro {
  -titulo: String
  -ISBN: String
  -editorial: String
  -idioma: String
  -numPaginas: int
  -anno: int
  -dispReserva: String
  --
  +Libro(titulo: String, ISBN: String, editorial: String, idioma: String, numPaginas: int, anno: int, dispReserva: String)
  +setTitulo(titulo: String): void
  +getTitulo(): String
  +setISBN(ISBN: String): void
  +getISBN(): String
  +setEditorial(editorial: String): void
  +getEditorial(): String
  +setIdioma(idioma: String): void
  +getIdioma(): String
  +setNumPaginas(numPaginas: int): void
  +getNumPaginas(): int
  +setAnno(anno: int): void
  +getAnno(): int
  +setDispReserva(dispReserva: String): void
  +getDispReserva(): String
  +estaDisponible(dispReserva: String): boolean
  +esExtranjero(idioma: String): boolean
  +informacion(): void
}

class LibroDigital {
  -formato: String
  -tamanyoMB: double
  --
  +LibroDigital(titulo: String, ISBN: String, editorial: String, idioma: String, numPaginas: int, anno: int, dispReserva: String, formato: String, tamanyoMB: double)
  +setFormato(formato: String): void
  +getFormato(): String
  +setTamanyoMB(tamanyoMB: double): void
  +getTamanyoMB(): double
  +informacion(): void
}

class LibroFisico {
  -numPaginas: int
  -ubicacion: String
  --
  +LibroFisico(titulo: String, ISBN: String, editorial: String, idioma: String, numPaginas: int, anno: int, dispReserva: String, ubicacion: String)
  +setNumPaginas(numPaginas: int): void
  +getNumPaginas(): int
  +setUbicacion(ubicacion: String): void
  +getUbicacion(): String
  +informacion(): void
}

class Main {
  +{static} main(args: String[]): void
}

class PersonaPoo {
  -nombre: String
  -edad: int
  -direccion: String
  -apellidos: String
  -dni: String
  -email: String
  -telefono: String
  -profesion: String
  -annoExperiencia: int
  --
  +PersonaPoo(nombre: String, edad: int, apellidos: String, dni: String, email: String, telefono: String, profesion: String, annoExperiencia: int)
  +mostrarInformacion(): void
  +setNombre(nombre: String): void
  +getNombre(): String
  +setEdad(edad: int): void
  +getEdad(): int
  +setApellidos(apellidos: String): void
  +getApellidos(): String
  +setdni(dni: String): void
  +getdni(): String
  +setEmail(email: String): void
  +getEmail(): String
  +setTelefono(telefono: String): void
  +getTelefono(): String
  +setProfesion(profesion: String): void
  +getProfesion(): String
  +getAnnoExperiencia(): int
  +setAnnoExperiencia(annoExperiencia: int): void
  +setDireccion(direccion: String): void
  +getDireccion(): String
  +estaJubilado(): boolean
}

class Sala {
  -nombre: String
  -capacidad: int
  -pizarra: boolean
  -tipo: String
  -dispReserva: boolean
  -numPersonas: int
  -aforoMax: int
  -personas: List<PersonaPoo>
  -personaResponsable: PersonaPoo
  --
  +Sala(nombre: String, capacidad: int, pizarra: boolean, tipo: String, dispReserva: boolean, numPersonas: int, aforoMax: int)
  +setNombre(nombre: String): void
  +getNombre(): String
  +setCapacidad(capacidad: int): void
  +getCapacidad(): int
  +setPizzara(pizarra: boolean): void
  +getPizarra(): boolean
  +setTipo(tipo: String): void
  +getTipo(): String
  +setDispReserva(dispReserva: boolean): void
  +getDispReserva(): boolean
  +setNumPersonas(numPersonas: int): void
  +getNumPersonas(): int
  +setAforoMax(aforoMax: int): void
  +getAforoMax(): int
  +setPersonaResponsable(personaResponsable: PersonaPoo): void
  +getPersonaResponsable(): PersonaPoo
  +estaDisponible(): void
  +tienePizarra(): void
  +informacionSala(): void
  +entrarPersona(p: PersonaPoo): boolean
  +salirPersona(p: PersonaPoo): boolean
  +mostrarPersonas(): void
}

class SalaEstudio {
  ~numMesas: int
  --
  +SalaEstudio(nombre: String, capacidad: int, pizarra: boolean, tipo: String, dispReserva: boolean, numPersonas: int, aforoMax: int, numMesas: int)
  +setNumMesas(numMesas: int): void
  +getNumMesas(): int
}

class SalaInformatica {
  ~numEquipos: int
  --
  +SalaInformatica(nombre: String, capacidad: int, pizarra: boolean, tipo: String, dispReserva: boolean, numPersonas: int, aforoMax: int, numMesas: int, numEquipos: int)
  +setNumEquipos(numEquipos: int): void
  +getNumEquipos(): int
}

class SalaLectura {
  -listaLibros: List<Libro>
  --
  +SalaLectura(nombre: String, capacidad: int, pizarra: boolean, tipo: String, dispReserva: boolean, numPersonas: int, aforoMax: int)
  +getListaLibro(): List<Libro>
  +agregarLibro(libro: Libro): void
  +eliminarLibro(libro: Libro): void
}

class Usuario {
  -numSocio: int
  -listaPrestados: List<Libro>
  --
  +Usuario(nombre: String, edad: int, direccion: String, apellidos: String, dni: String, email: String, telefono: String, profesion: String, annoExperiencia: int, numSocio: int)
  +setNumSocio(numSocio: int): void
  +numSocio(): int
  +getListaLibrosPrestados(): List<Libro>
  +prestarLibro(libro: Libro): void
  +devolverLibro(libro: Libro): void
}

Biblioteca o-- Libro
Biblioteca o-- Sala
Biblioteca o-- PersonaPoo
Empleado --|> PersonaPoo
LibroDigital --|> Libro
LibroFisico --|> Libro
Sala o-- PersonaPoo
Sala *-- PersonaPoo
SalaEstudio --|> Sala
SalaInformatica --|> Sala
SalaLectura --|> Sala
SalaLectura o-- Libro
Usuario --|> PersonaPoo
Usuario o-- Libro
@enduml